# mailbox-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  imap.example.toml  roadmap.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
config/: lifecycle_lexicon.yaml
contacts/: Cargo.toml  README.md
contacts/src/: lib.rs
contacts/tests/: normalize.rs
docs/: json-contract.md  lifecycle-lexicon.md
src/: canonical.rs  email_text.rs  imap.rs  lib.rs  lifecycle_lexicon.rs  mbox.rs  projection.rs
tests/: gmail_imap.rs  mbox.rs  parse_basic.rs
tests/fixtures/: basic.eml  false_positive_from_line.mbox  inline_cid.eml  inline_forward_body.eml  mboxrd_escaped_from.mbox  multipart_with_attachment.mbox  two_messages_simple.mbox  with_forward.eml  with_from_sent_quote.eml  with_quote.eml
