[package]
name = "mailbox-parser"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
contacts = { path = "./contacts" }
imap = "3.0.0-alpha.15"
mail-parser = "0.10"
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
