[package]
name = "mailbox-parser-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
mailbox-parser = { path = ".." }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"

[[bin]]
name = "mailbox-parser-cli"
path = "src/main.rs"
